# pyopengl

./: 3dview.py  canvas.txt  center_base_clickpoint.py  cos_wave.py  customutil.py  drawwithclick.py  fern_ifs.py  ifs.py  lsystem.py  main.py  mouseclickpoint.py  paint_with_saveload.py  persistent_draw_copylist.py  persistent_draw_reflist.py  pyproject.toml  star_plot.py  turtle.py  tut_Cube.py
engine/: Cube.py  Mesh.py  basic_obj_load.py  camera.py  loadmesh.py  main.py
gpu_engine/: blank_cpu_engine.py  main.py  shader.py
gpu_engine/components/: PyGLApp.py  axis.py  camera.py  light.py  loadmesh.py  material.py  mesh.py  plane.py  uniform.py  utils.py
gpu_engine/geometry/: doghouse.mtl  pighead.mtl
gpu_engine/geometry/doghouse/: license.txt  scene.gltf
gpu_engine/glapp/: GraphicsData.py  PyGLApp.py  animated_cube.py  animated_mesh.py  axis.py  camera.py  cube.py  light.py  loadmesh.py  mesh.py  square.py  texture.py  transformations.py  triangle.py  uniform.py
gpu_engine/shaders/: grid_fs.vs  grid_vs.vs  texturedfrag.vs  texturedvert.vs  vertexcolor_fs.vs  vertexcolor_vs.vs
