[tool.poetry]
name = "openglpython"
version = "0.1.0"
description = ""
authors = ["motiongorilla <nize.afonya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
PyOpenGL = "^3.1.7"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
